Style(text): rename contact address to branch location

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -216,7 +216,7 @@ BranchInformationDetailId
 BranchInformationId
 ContactPerson
 ContactNumber
-ContactAddress
+BranchLocation
 SquareMeter
 Description
 RentalPrice
